[package]
name = "cryptolens-yc"
version = "0.1.0"
edition = "2021"
description = "Cryptolens web API client for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
openssl = "0.10.64"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.198", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.116"
